add rollterm schedule management
add rollterm schedule management

--- a/src/app/clients/clients-view/identities-tab/identities-tab.component.html
+++ b/src/app/clients/clients-view/identities-tab/identities-tab.component.html
@@ -68,7 +68,7 @@
              mat-raised-button color="warn"
              *midasHasPermission="'TXN_CREATE'"
              (click)="routeToMakeTransaction(identity.id, 'rollTerm', identity.documentKey)"  >
-              Đáo HT
+              Tạo ĐHT
             </button>
           </td>
         </ng-container>
