--- a/src/app/home/mainboard/mainboard.component.html
+++ b/src/app/home/mainboard/mainboard.component.html
@@ -1,7 +1,9 @@
 <mat-card>
+  <mat-label>Thực hiện giao dịch</mat-label>
+
   <form class="example-container " >
     <mat-form-field style="width: 100%; "  >
-      <mat-label>Tìm kiếm khách hàng, đại lý</mat-label>
+      <mat-label>Tìm kiếm khách hàng, đại lý thực hiện giao dịch</mat-label>
       <input    type="email" matInput #querySearchAll (change)=" this.searchClientAndGroup(querySearchAll.value);"
              placeholder="Tìm kiếm theo tên, số CMND/CCCD ,số thẻ, số điện thoại">
 
