--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -187,7 +187,8 @@
     [pageSize]="10"
     [pageSizeOptions]="[10, 25, 50, 100]"
     showFirstLastButtons
-    (page)="pageEvent = getRollTermScheduleAndCardDueDayInfo()"
+
 
     ></mat-paginator>
+<!--    (page)="pageEvent = getRollTermScheduleAndCardDueDayInfo()"-->
 </mat-card>
