add filter card due day, fix update card
add filter card due day, fix update card

--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -14,118 +14,124 @@
         <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateToPicker></mat-datepicker>
       </mat-form-field>
-      <div fxFlex="31%">
-        <button
-          *ngIf="fromDateAndToDate"
-          (click)="getRollTermScheduleAndCardDueDayInfo()"
-          style="align-self: center"
-          color="primary"
-          mat-raised-button
-        >
-          Tìm kiếm &nbsp;<i class="fa fa-search" aria-hidden="true"></i>
-        </button>
-        <h3 *ngIf="!fromDateAndToDate">
-          Vui lòng chọn thời gian &nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
-        </h3>
-      </div>
+
     </div>
     <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"></div>
   </mat-card-content>
 
-  <mat-accordion>
-    <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
-      <mat-expansion-panel-header>
-        <mat-panel-title> Xem theo </mat-panel-title>
-      </mat-expansion-panel-header>
-      <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
-        <mat-form-field fxFlex="18%">
-          <mat-label>Đại lý</mat-label>
-          <input matInput formControlName="agencyName" />
-        </mat-form-field>
+  <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column" [formGroup]="formFilter">
+    <mat-form-field fxFlex="18%">
+      <mat-label>Trạng thái</mat-label>
+      <select matSelect matNativeControl formControlName="statusFilter">
+        <option *ngFor="let status of statusOptionAll" [value]="status.value">
+          {{ status.label }}
+        </option>
+      </select>
+    </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Khách hàng</mat-label>
-          <input matInput formControlName="panHolderName" />
-        </mat-form-field>
+    <mat-form-field fxFlex="18%">
+      <mat-label>Ngân hàng</mat-label>
+      <select matSelect matNativeControl formControlName="bankName">
+        <option *ngFor="let bank of listBank" [value]="bank.bankCode">
+          {{ bank.bankName }}
+        </option>
+      </select>
+    </mat-form-field>
 
-        <mat-form-field fxFlex="18%">
-          <mat-label>Tiền giao dịch</mat-label>
-          <input matInput formControlName="terminalAmount" />
-        </mat-form-field>
-
-        <mat-form-field fxFlex="18%">
-          <mat-label>Nhân viên</mat-label>
-          <mat-select formControlName="staffId">
-            <mat-option *ngFor="let type of staffs" [value]="type.id">
-              {{ type.displayName }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div>
-    </mat-expansion-panel>
-  </mat-accordion>
+    <mat-form-field fxFlex="36%">
+      <mat-label>Tìm tên khách hàng/số thẻ</mat-label>
+      <input matInput formControlName="query" />
+    </mat-form-field>
+    <div fxFlex="20%">
+      <button
+        *ngIf="fromDateAndToDate"
+        (click)="getRollTermScheduleAndCardDueDayInfo()"
+        style="align-self: center"
+        color="primary"
+        mat-raised-button
+      >
+        Tìm kiếm &nbsp;<i class="fa fa-search" aria-hidden="true"></i>
+      </button>
+      <h3 *ngIf="!fromDateAndToDate">
+        Vui lòng chọn thời gian &nbsp; <i class="fa fa-calendar" style="align-self: center" aria-hidden="true"></i>
+      </h3>
+    </div>
+  </div>
 
   <mat-card-content>
-    <table mat-table multiTemplateDataRows class="mat-elevation-z8" [dataSource]="dataSource" matSort>
+    <table mat-table multiTemplateDataRows [dataSource]="dataSource">
       <ng-container matColumnDef="panHolderName">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Tên khách hàng</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Tên khách hàng</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">{{ transaction.clientName }}</td>
       </ng-container>
 
       <ng-container matColumnDef="phone">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Số điện thoại</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ journalEntry.clientPhone }}
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số điện thoại</th>
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
+          {{ card.clientPhone }}
         </td>
       </ng-container>
 
       <ng-container matColumnDef="cardNumber">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Số thẻ</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">{{ journalEntry.cardNumber }}</td>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số thẻ</th>
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">{{ card.cardNumber }}</td>
       </ng-container>
 
       <ng-container matColumnDef="bankName">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Ngân hàng</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">{{ journalEntry.bankName }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="isHold">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Đang giử thẻ</th>
-        <td mat-cell *matCellDef="let journalEntry">
-          <input matCheckbox type="checkbox" />
-        </td>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Ngân hàng</th>
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">{{ card.bankName }}</td>
       </ng-container>
 
       <ng-container matColumnDef="dueDay">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Ngày đến hạn</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ journalEntry.dueDay }}
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Ngày đến hạn</th>
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
+          <mat-form-field>
+            <input matInput type="text" [(ngModel)]="card.dueDay" mask="00" />
+          </mat-form-field>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="expiredDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Ngày hết hạn</th>
-        <td mat-cell style="padding: 6px" *matCellDef="let journalEntry">{{ journalEntry.expiredDate }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="status">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef mat-sort-header>Trạng thái</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let journalEntry">
-          {{ displayCardStatusId(journalEntry.trackingState) }}
+        <th mat-header-cell *matHeaderCellDef>Ngày hết hạn</th>
+        <td mat-cell *matCellDef="let card">
+          <mat-form-field>
+            <input type="text" matInput [(ngModel)]="card.expiredDateString" mask="00/00" />
+          </mat-form-field>
         </td>
       </ng-container>
 
-      <ng-container matColumnDef="actions" style="width: 25px">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-        <td mat-cell *matCellDef="let transaction">
-          <span
-            style="float: right; width: 15px"
-            [matMenuTriggerData]="transaction"
-            [matMenuTriggerFor]="transactionMenu"
-            (menuOpened)="menuOpened()"
-            (menuClosed)="menuClosed()"
-            ><i class="fa fa-ellipsis-v" aria-hidden="true"></i
-          ></span>
+      <ng-container matColumnDef="isHold">
+        <th mat-header-cell *matHeaderCellDef>Giử thẻ</th>
+        <td mat-cell *matCellDef="let card">
+          <input matCheckbox type="checkbox" [(ngModel)]="card.isHold" [checked]="card.isHold == 1" />
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Trạng thái</th>
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
+          <mat-form-field appearance="outline">
+            <select [disabled]="card.trackingState == 'C'" matSelect [(ngModel)]="card.trackingState" matNativeControl>
+              <option *ngFor="let status of statusOption" [value]="status.value">
+                {{ status.label }}
+              </option>
+            </select>
+          </mat-form-field>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="note">
+        <th mat-header-cell *matHeaderCellDef>Ghi chú</th>
+        <td mat-cell *matCellDef="let card">
+          <mat-form-field>
+            <textarea matInput [(ngModel)]="card.note"></textarea>
+          </mat-form-field>
+        </td>
+      </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef>Hành động</th>
+        <td mat-cell *matCellDef="let card; let i = dataIndex" style="width: 8%; text-align: center">
+          <mat-icon style="color: green" title="Cập nhật" (click)="updateCardTrackingState(i)">save</mat-icon>
+          <mat-icon style="color: blue" title="Nhận phí" (click)="advanceCash(card.refId, card.clientId)">attach_money</mat-icon>
         </td>
       </ng-container>
       <ng-container matColumnDef="expandedDetail">
@@ -150,45 +156,19 @@
         (click)="expandedElement = expandedElement === element ? null : element"
       ></tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
-
     </table>
   </mat-card-content>
   <div *ngIf="isLoading" style="display: flex; justify-content: center; align-items: center; background: white">
     <mat-progress-spinner color="warn" mode="indeterminate"> </mat-progress-spinner>
   </div>
-  <mat-menu #transactionMenu="matMenu" [overlapTrigger]="false" style="width: 50px">
-    <ng-template
-      matMenuContent
-      let-custId="custId"
-      let-identifierId="identifierId"
-      let-refid="refid"
-      let-panHolderName="panHolderName"
-      let-panNumber="panNumber"
-      style="width: 50px"
-    >
-      <button (click)="showCreateRollTermScheduleDialog(custId, panHolderName, identifierId, panNumber)" mat-menu-item>
-        <img src="assets/images/icons/next.svg" />&nbsp;Tạo ĐHT
-      </button>
-
-      <button (click)="showRollTermScheduleDialog(refid)" mat-menu-item>
-        <img src="assets/images/icons/add.svg" />&nbsp;Lịch ĐHT
-      </button>
-      <button mat-menu-item><img src="assets/images/icons/order.svg" />&nbsp;Xử lý ĐHT</button>
-
-      <hr />
-      <button mat-menu-item><i class="fa fa-eye" aria-hidden="true"></i>&nbsp;Hủy ĐHT</button>
-    </ng-template>
-  </mat-menu>
 
   <mat-paginator
-
     paginator
     [length]="transactionsData?.sum"
     [pageSize]="10"
     [pageSizeOptions]="[10, 25, 50, 100]"
     showFirstLastButtons
-
-
-    ></mat-paginator>
-<!--    (page)="pageEvent = getRollTermScheduleAndCardDueDayInfo()"-->
-</mat-card>
+    (page)="pageEvent = getRollTermScheduleAndCardDueDayInfo()"
+  ></mat-paginator>
+  =</mat-card
+>
