--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -168,7 +168,7 @@
     [pageSize]="10"
     [pageSizeOptions]="[10, 25, 50, 100]"
     showFirstLastButtons
-    (page)="pageEvent = getRollTermScheduleAndCardDueDayInfo()"
+    (page)="getRollTermScheduleAndCardDueDayInfo()"
   ></mat-paginator>
   =</mat-card
 >
