--- a/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
+++ b/src/app/transactions/rollTerm-schedule-transaction/due-day-card-tab/due-day-card-tab.component.html
@@ -14,7 +14,6 @@
         <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
         <mat-datepicker #transactionDateToPicker></mat-datepicker>
       </mat-form-field>
-
     </div>
     <div class="container" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column"></div>
   </mat-card-content>
@@ -62,7 +61,25 @@
     <table mat-table multiTemplateDataRows [dataSource]="dataSource">
       <ng-container matColumnDef="panHolderName">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Tên khách hàng</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">{{ transaction.clientName }}</td>
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let transaction">
+          <a href="/#/clients/{{ transaction.clientId }}/general?typeViewClient=view">
+            <mat-icon style="color: black" title="Chi tiết">person</mat-icon>
+            {{ transaction.clientName }}<br />
+          </a>
+          <mat-label style="font-size: small" *ngIf="transaction.groupName">
+            <a href="#/groups/{{ transaction.groupId }}/general">
+              <mat-icon style="color: black; " title="Thuộc đại lý">groups</mat-icon>
+              {{ transaction.groupName }}
+            </a>
+            <br />
+          </mat-label>
+          <mat-label (click)="showHistoryTransaction(transaction.clientId)" title="Xem lịch sử giao dịch 90 ngày gần nhất">
+            <mat-icon style="color: black">fact_check</mat-icon>
+            <a style="color: black;" href="javascript:void(0)">
+              Lịch sử giao dịch
+            </a>
+          </mat-label>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="phone">
@@ -74,7 +91,7 @@
 
       <ng-container matColumnDef="cardNumber">
         <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Số thẻ</th>
-        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">{{ card.cardNumber }}</td>
+        <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">{{ card.cardNumber.replace("XXX-XXX", "X") }}</td>
       </ng-container>
 
       <ng-container matColumnDef="bankName">
@@ -83,7 +100,7 @@
       </ng-container>
 
       <ng-container matColumnDef="dueDay">
-        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Ngày đến hạn</th>
+        <th mat-header-cell fxHide fxShow.gt-md *matHeaderCellDef>Ngày<br />đến hạn</th>
         <td mat-cell fxHide fxShow.gt-md *matCellDef="let card">
           <mat-form-field>
             <input matInput type="text" [(ngModel)]="card.dueDay" mask="00" />
@@ -92,7 +109,7 @@
       </ng-container>
 
       <ng-container matColumnDef="expiredDate">
-        <th mat-header-cell *matHeaderCellDef>Ngày hết hạn</th>
+        <th mat-header-cell *matHeaderCellDef>Ngày<br />hết hạn</th>
         <td mat-cell *matCellDef="let card">
           <mat-form-field>
             <input type="text" matInput [(ngModel)]="card.expiredDateString" mask="00/00" />
@@ -131,7 +148,9 @@
         <th mat-header-cell *matHeaderCellDef>Hành động</th>
         <td mat-cell *matCellDef="let card; let i = dataIndex" style="width: 8%; text-align: center">
           <mat-icon style="color: green" title="Cập nhật" (click)="updateCardTrackingState(i)">save</mat-icon>
-          <mat-icon style="color: blue" title="Nhận phí" (click)="advanceCash(card.refId, card.clientId)">attach_money</mat-icon>
+          <mat-icon style="color: blue" title="Nhận phí" (click)="advanceCash(card.refId, card.clientId)"
+            >attach_money</mat-icon
+          >
         </td>
       </ng-container>
       <ng-container matColumnDef="expandedDetail">
